--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -57,12 +57,11 @@ layout: default
   <div class="post-content e-content" itemprop="articleBody">
     {{ content | toc  }}
   </div>
-  </article>
-  <script src="https://utteranc.es/client.js"
-        repo="ClubLinguistics / blogs"
-        issue-term="pathname"
-        label="Comment"
-        theme="github-dark"
-        crossorigin="anonymous"
-        async>
-</script>
+   {%- if page.comments -%}
+    {%- include utterances.html -%}
+  {%- endif -%}
+  {%- if site.disqus.shortname -%}
+    {%- include disqus_comments.html -%}
+  {%- endif -%}
+  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+</article>
